<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mainactivity.gasprices.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.03"
            android:text="@string/select_city" />

        <Spinner
            android:id="@+id/city_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/city_list" />

        <TextView
            android:id="@+id/gas_type_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_gas_type" />

        <RadioGroup
            android:id="@+id/gas_type_rd_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_petrol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_petrol" />

            <RadioButton
                android:id="@+id/radio_diesel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_diesel" />
        </RadioGroup>

        <Button
            android:id="@+id/get_price_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/get_price_btn"
            android:textColor="@android:color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/price_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textStyle="bold"
            android:textSize="45sp"
            android:textColor="@color/colorAccent"

            android:textAppearance="@android:style/TextAppearance.Holo.Large" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
